remove old button-alert scss

--- a/src/modern/sass/src/view/panel/MobileMenu.scss
+++ b/src/modern/sass/src/view/panel/MobileMenu.scss
@@ -46,7 +46,10 @@
     }
 }
 
-
+.x-lada-elan-button-new{
+    background-image: -webkit-linear-gradient(top, #FF0d08, #DD0204 50%, #DD0b09 51%, #DD0204) !important;
+    border-color: #690000 !important;
+}
 .button-alert{
         background-color: red !important;
         background-image: none;
