commit with new metadata files for new layers

--- a/src/sass/var/Component_BfS.scss
+++ b/src/sass/var/Component_BfS.scss
@@ -1,4 +1,4 @@
-$base-color: dynamic(#294d71);
+$base-color: dynamic(#29712e);
 
 $button-default-glyph-opacity: dynamic(1);
 $button-toolbar-glyph-opacity: dynamic(1);
