--- a/src/sass/src/view/container/RoutingResult.scss
+++ b/src/sass/src/view/container/RoutingResult.scss
@@ -32,6 +32,12 @@
 
 .routing-icon-cell {
     vertical-align: middle;
+
+}
+
+.routing-center-cell {
+    vertical-align: middle;
+    padding-left: 10px;
 }
 
 .routing-summary-icon-cell {
