--- a/src/sass/src/view/form/FleetRoutingSettings.scss
+++ b/src/sass/src/view/form/FleetRoutingSettings.scss
@@ -9,6 +9,7 @@
 
     >.x-panel-header {
         background-color: white;
+        padding-left: 12px;
 
         .x-title-text {
             color: #29333E;
