Show filter dependency tooltip in filter window

--- a/src/classic/sass/src/view/form/LayerFilter.scss
+++ b/src/classic/sass/src/view/form/LayerFilter.scss
@@ -5,3 +5,10 @@
 .timeselect-chart rect.selection {
     fill: rgb(85, 127, 162);
 }
+
+.field-label-dependency .x-form-item-label-text::before {
+    font-family: FontAwesome;
+    content: "\f085";
+    display: inline;
+    padding-right: 3px;
+}
