--- a/src/sass/src/view/window/FleetRouting.scss
+++ b/src/sass/src/view/window/FleetRouting.scss
@@ -45,3 +45,23 @@
         box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.6);
     }
 }
+
+.fleet-routing-planning-horizons {
+
+    .routing-brighter-panel {
+        .x-panel-header {
+            background-color: #496886;
+            border-color: #496886;
+        }
+    }
+
+    >.x-panel-header {
+        background-color: white;
+        padding-left: 12px;
+
+        .x-title-text {
+            color: #29333E;
+            font-size: medium;
+        }
+    }
+}
